# hits-salsa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
datasets/: 100samples.json  1ksamples.json  200samples.json  500samples.json  5ksamples.json  clean.py  clean.sed  json2ajd.c  json2mat.py  json2tmp.py  mat2csr.py  tmp2adj.py
include/: blas.hpp  csmat.hpp  csr.hpp  utils.hpp
include/algorithms/: hits.hpp  salsa.hpp
src/: csr.cpp  utils.cpp
src/hits/: main.cpp
test/: blas.cpp  csmat.cpp  hits.cpp  json.cpp
